[VARKA] Task 31: point the harness at the kernels and the emitted loops
Commit 3 of task 31. Nine cases, green at both vector widths: the three
self-tests, DateVectorOps.vectorAddDays and ChronoVectorOps.vectorFourFields
over the hand-written kernels, three emitted loop methods (year, dayofweek and a
comparison), and a 128-bit run over three of them.

The kernels come before the emitted loops deliberately. They are the references
the emitter is measured against, so if one of them stops vectorizing, an emitted
loop's regression is not attributable to the emitter.

Everything vectorizes. That is the answer this project has been assuming without
evidence, and it is now read off the machine code rather than inferred from a
ratio. From the wide run, for the record - the suite asserts presence, never
these numbers: vectorAddDays 5 vpaddd; vectorFourFields 15 vpaddd, 13 vpmulld,
7 vpsrld; the emitted year body 10 vpaddd, 8 vpmulld, 4 vpsrld, 63 %zmm
operands; the emitted dayofweek body 65 vpaddd, 26 vpmulld, 39 vpsrld; the
emitted comparison 15 vpcmpnled and 15 vpblendmd with no branch. The dayofweek
row is worth reading twice - task 14's range-narrowed magic exists precisely to
avoid a scalar remainder, and its multiply and shift are packed, so the lowering
bought what it was supposed to buy.

One family had to be rewritten, and it is the plan's prediction 3 landing in a
place the prediction did not name. The list this suite was written with -
vpcmpd, vpcmpeqd, vpcmpgtd - matched nothing, because AVX-512 folds the
predicate into the mnemonic and `a > b` on int lanes comes out vpcmpnled. The
fix is a pattern, [v]pcmp<predicate>d, rather than a longer list: enumerating a
dozen predicate suffixes is a list that goes stale on the next lowering change.
Family now carries an optional regex beside its mnemonic set for that reason.

Predictions scored in section 12, including the two that did not hold. The
narrow-width run was predicted to be where a bug in this suite would surfa